# schedule-substack-notes

./: .gitignore  README.md  start.bat  start.command  stop.bat  stop.command
.github/workflows/: release.yml
extension/: background.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js
extension/lib/: api.js  cookies.js  noteFormatter.js
server/: .env.example  Cargo.toml
server/migrations/: 001_create_users.sql  002_create_scheduled_notes.sql
server/src/: config.rs  db.rs  error.rs  main.rs  models.rs  state.rs
server/src/middleware/: auth.rs
server/src/routes/: auth.rs  notes.rs
server/src/services/: encryption.rs  mod.rs  scheduler.rs  substack.rs
